gcc/testsuite/rust/rustc/ui/static/static-mut-not-constant.rs
#![feature(box_syntax)]

static mut a: Box<isize> = box 3;
// { dg-error ".E0010." "" { target *-*-* } .-1 }

fn main() {}

